--- a/index.html
+++ b/index.html
@@ -1,106 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <script type="text/javascript" src="jquery-3.4.1.slim.min.js" ></script>
-    <script type="text/javascript" src="paper-full.min.js"></script>
-    <script type="text/javascript" src="pickr.min.js"></script>
-    <script type="text/javascript" src="turn.min.js"></script>
-
-    <script type="text/paperscript" canvas="myCanvas">
-     var raster = new Raster("kids");
-     // Move the raster to the center of the view
-     raster.position = view.center;
-     raster.scale(0.8);
-
-     var path;
-     function onMouseDown(event) {
-	     // If we produced a path before, deselect it:
-	     if (path) {
-		     path.selected = false;
-	     }
-
-	     path = new Path();
-	     path.strokeColor = $("#colorvalue").val();
-       path.strokeWidth = 10;
-       path.strokeCap = "round";
-       path.strokeJoin = "round";
-	     // Select the path, so we can see its segment points:
-	     path.fullySelected = false;
-     }
-
-     function onMouseDrag(event) {
-	     // Every drag event, add a point to the path at the current
-	     // position of the mouse:
-	     path.add(event.point);
-     }
-
-     function onMouseUp(event) {
-	     var segmentCount = path.segments.length;
-	     // When the mouse is released, simplify it:
-	     path.simplify();
-     }
-
-    </script>
-
-    <script type="text/javascript">
-     $( document ).ready(function() {
-       //the event occurred
-       const pickr = new Pickr({
-         el: '.color-picker',
-         container: 'body',
-         useAsButton: true,
-         theme: 'nano',
-         default: $("#colorvalue").val(),
-         swatches: [
-           'rgba(244, 67, 54, 1)',
-           'rgba(63, 81, 181, 0.8)',
-           'rgba(33, 150, 243, 0.75)',
-           'rgba(0, 150, 136, 0.75)',
-           'rgba(76, 175, 80, 0.8)',
-           'rgba(205, 220, 57, 0.9)',
-           'rgba(255, 193, 7, 1)'
-         ],
-         position: 'bottom-middle',
-         showAlways: true,
-         comparison: true,
-         inline: true,
-
-         components: {
-           preview: false,
-           opacity: false,
-           hue: false,
-           interaction: {
-             hex: false,
-             input: false,
-             clear: false,
-             cancel: false,
-             save: false
-           }
-         }
-       });
-
-       pickr.on('change', color => {
-  	     $("#colorvalue").val(color.toHEXA().toString());
-       });
-
-     });
-    </script>
-
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="nano.min.css"/> 
-  </head>
-  <body>
-    <div>
-      <section>
-        <input id="colorvalue" value='#F44336' type="hidden"> </input>
-        <div class="center">
-          <div class="color-picker"></div>
-        </div>
-      </section>
-      <canvas id="myCanvas" resize>
-        <img id="kids" src="kids.png"></img>
-      </canvas>
-
-    </div>
-  </body>
-</html>
+hello
